--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,136 @@
-.card{
+body{
+  height: 90vh;
   display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: 100vh;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(90deg,#900C3F,#FF1800);
 }
-.container{
-
-  width: 60%;
-  height: 40%;
-  border-radius: 50px;
-  background: linear-gradient(90deg, 
-  #900C3F, #C70039, #FF1800);
-  background-size: 300% 100%;
-  animation: gradient 8s ease infinite;
+.slider-thumb::before {
+  position: absolute;
+  content: "";
+  left: 30%;
+  top: 20%;
+  width: 450px;
+  height: 450px;
+  background: #17141d;
+  border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
+  will-change: border-radius, transform, opacity;
+  animation: sliderShape 5s linear infinite;
+  display: block;
+  z-index: -1;
+  -webkit-animation: sliderShape 5s linear infinite;
 }
-@keyframes gradient{
-  0%{
-    background-position: 0% 50%;
+@keyframes sliderShape{
+  0%,100%{
+  border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
+    transform: translate3d(0,0,0) rotateZ(0.01deg);
+  }
+  34%{
+      border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
+    transform:  translate3d(0,5px,0) rotateZ(0.01deg);
   }
   50%{
-    background-position: 100% 50%;
+    transform: translate3d(0,0,0) rotateZ(0.01deg);
   }
-  100%{
-    background-position: 0% 50%;
+  67%{
+    border-radius: 100% 60% 60% 100% / 100% 100% 60% 60% ;
+    transform: translate3d(0,-3px,0) rotateZ(0.01deg);
   }
 }
-.yo{
-  width: 20vw;
-  height: 20vh;
-  padding: 10px;
-  border-radius: 50px;
+.card {
+  width: 500px;
+  height: 254px;
+  border-radius: 20px;
+  padding: 5px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  background-image: linear-gradient(144deg,#FF1800, #C70039 50%,#900C3F);
+}
+
+.card__content {
+  background: rgb(5, 6, 45);
+  border-radius: 17px;
+  width: 100%;
+  height: 100%;
+  
+}
+.cont{
+  display: flex;
+  flex-direction: row;
+ 
+}
+.foto{
+  height: 30%;
+  width: 30%;
+  border-radius: 17px;
+}
+.textos{
+  font-family: "Roboto", Arial, "Segoe UI", sans-serif;
+  flex-flow: row;
+  padding-left: 10px;
+}
+.nom{
+  color: white; 
+}
+.icons{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.button {
+  position: relative;
+  width: 150px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: 1px solid #900C3F;
+  background-color: #C70039 ;
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.button, .button__icon, .button__text {
+  transition: all 0.3s;
+}
+
+.button .button__text {
+  transform: translateX(35px);
+  color: #fff;
+  font-weight: 600;
+}
+
+.button .button__icon {
+  position: absolute;
+  transform: translateX(109px);
+  height: 100%;
+  width: 39px;
+  background-color: #900C3F;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button .svg {
+  width: 20px;
+}
+
+.button:hover {
+  background: #900C3F;
+}
+
+.button:hover .button__text {
+  color: transparent;
+}
+
+.button:hover .button__icon {
+  width: 148px;
+  transform: translateX(0);
+}
+
+.button:active .button__icon {
+  background-color: #C70039;
+}
+
+.button:active {
+  border: 1px solid #900C3F;
 }
